# fakespy

./: .gitignore  README.md  cli.py  pyproject.toml
fakespy/: analyzer.py  client.py
tests/: test_fakespy.py
