[tool.poetry]
name = "fakespy"
version = "0.1.0"
description = ""
authors = ["Manabu Niseki <manabu.niseki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.4.1"
httpx = "^0.12.1"
fire = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-randomly = "^3.3.1"
autopep8 = "^1.5.1"
black = "^19.10b0"
pytest-asyncio = "^0.10.0"
pytest-black = "^0.3.8"
pytest-cov = "^2.8.1"
autoflake = "^1.3.1"
isort = "^4.3.21"
mypy = "^0.770"
flake8 = "^3.7.9"
pre-commit = "^2.3.0"
seed-isort-config = "^2.1.1"

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
known_third_party = ["fire", "httpx", "loguru"]
line_length = 88
multi_line_output = 3
use_parentheses= true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
